# photo_frame_gui

./: README.md  config.ini.default  load_config.py  logging_config.py  main.py  photo_frame_gui.py  pyproject.toml  rasp_pi_connection.py
